--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ node {
 	download = true
 	version = "9.11.1"
 	npmVersion = "5.6.0"
-	distBaseUrl = 'https://nodejs.org/dist/'
+	distBaseUrl = 'https://direct.nodejs.org/dist/'
 }
 
 //declare a build task
